--- a/website/content/ru/security/advisories.adoc
+++ b/website/content/ru/security/advisories.adoc
@@ -9,3 +9,11 @@ security: advisories
 Данная веб страница содержит список выпущенных бюллетеней безопасности FreeBSD. По общим вопросам безопасности FreeBSD обращайтесь к странице link:..[информационной безопасности FreeBSD].
 
 Выпуски, затрагивающие коллекцию портов FreeBSD, представлены в документе http://vuxml.FreeBSD.org/[FreeBSD VuXML].
+
+Ошибки, затрагивающие базовую систему, но не классифицированные как уязвимости безопасности, рассматриваются отдельно на странице link:../notices[Уведомления об исправлениях FreeBSD].
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (06.12.2023): 58fb46dd8fde39eb1aeaa55b50227ff04530c804
+//
