--- a/website/content/ru/status/report-2025-10-2025-12/osv.adoc
+++ b/website/content/ru/status/report-2025-10-2025-12/osv.adoc
@@ -1,5 +1,5 @@
 [[_converting_vuxml_to_open_source_vulnerability_database]]
-=== Конвертация VuXML в базу данных уязвимостей с открытым исходным кодом (Open Source Vulnerability Database)
+=== Конвертация VuXML в базу данных уязвимостей открытого исходного кода (Open Source Vulnerability Database)
 
 Ссылки: +
 link:https://github.com/illuusio/freebsd-osv/blob/main/db/freebsd-osv.json[База данных OSV FreeBSD для pkg] URL: link:https://github.com/illuusio/freebsd-osv/blob/main/db/freebsd-osv.json[] +
@@ -13,21 +13,21 @@ link:https://github.com/package-url/purl-spec/pull/496[Работа над PURL 
 
 Контакт: Tuukka Pasanen <tuukka.pasanen@ilmi.fi>
 
-Работа над базой данных уязвимостей с открытым исходным кодом (OSV) ведется с мая.
+Работа над базой данных уязвимостей открытого исходного кода (OSV) ведётся с мая.
 Целью этой работы было создание базы данных OSV и отказ от старого формата базы данных VuXML.
 
-В настоящее время существует тестовая база данных и pull request для man:pkg[8].
+В настоящее время существует тестовая база данных и предложенные изменения кода для man:pkg[8].
 Тестовую базу данных можно обновить из VuXML и конвертировать в формат JSON OSV.
-Необходимые инструменты для обновления и создания объединенного файла базы данных для pkg завершены.
+Необходимые инструменты для обновления и создания объединённого файла базы данных для pkg завершены.
 Также реализован экспорт в Commonmark, который хорошо отображается на GitHub.
 
-Кроме того, была реализована вышестоящая (upstream) поддержка FreeBSD в схеме OSV, что позволяет проверять файлы OSV на соответствие официальным источникам.
-Также ведется работа по PURL, которая медленно продвигается вперед.
+Кроме того, была реализована поддержка FreeBSD в оригинальном проекте OSV Schema, что позволяет проверять файлы OSV на соответствие официальным источникам.
+Также ведётся работа по PURL, которая медленно продвигается вперед.
 
-Если вы хотите помочь этому проекту, вот несколько задач:
+Если вы хотите помочь этому проекту, то вот несколько задач:
 
 - Проверить точность конвертации из VuXML в OSV
-- Проверить, может ли pkg использовать базу данных OSV и выдает ли он корректные результаты
+- Проверить, может ли pkg использовать базу данных OSV и выдаёт ли он корректные результаты
 
 Спонсор: Фонд FreeBSD
 
